fix safari hidden text [CLOUDFRONT-12037]
Squashed commit of the following:

commit 22f9bf8597267a5012ac14a32135b93aa095b398
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Tue Aug 30 15:00:09 2022 +0300

    Update CHANGELOG.md

commit 20de64967700de33a19a6cad3b9413140e0b23e7
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Tue Aug 30 14:40:24 2022 +0300

    Add comment [CLOUDFRONT-12037]

commit 3eac3e2488de0cd53f5d781592d917464ae42b3d
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Tue Aug 30 12:30:17 2022 +0300

    Fix bug with text under video in safari

--- a/src/blocks/Slider/Slider.scss
+++ b/src/blocks/Slider/Slider.scss
@@ -269,6 +269,20 @@ $block: '.#{$ns}SliderBlock';
 
         .slick-slide {
             padding: 0;
+
+            @keyframes safari-fix {
+                from {
+                    transform: translateX(0.001px);
+                }
+                to {
+                    transform: translateX(0);
+                }
+            }
+
+            // fix text under video in safari
+            &[aria-hidden='true'] {
+                animation: safari-fix 1000ms;
+            }
         }
 
         .slick-list {
